--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
 google-api-python-client==2.116.0
 IMAPClient==3.0.1
+jinja2==3.1.3
 
 # Date/time handling
 python-dateutil==2.8.2
