--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,9 @@ google-api-python-client==2.116.0
 IMAPClient==3.0.1
 jinja2==3.1.3
 
+# Google Sheets integration
+gspread==6.0.0
+
 # Date/time handling
 python-dateutil==2.8.2
 
@@ -23,6 +26,7 @@ pandas==2.2.0
 pytest==7.4.4
 pytest-asyncio==0.23.3
 pytest-mock==3.12.0
+pytest-cov==4.1.0
 
 # Development tools
 black==23.12.1
