--- a/.github/workflows/check-replies.yml
+++ b/.github/workflows/check-replies.yml
@@ -53,6 +53,13 @@ jobs:
         restore-keys: |
           events-
           
+    - name: Restore digest tracking data
+      uses: actions/download-artifact@v4
+      with:
+        name: digest-tracking
+        path: data/
+      continue-on-error: true  # Don't fail if no tracking exists
+          
     - name: Check for email replies
       env:
         PYTHONPATH: ${{ github.workspace }}
